[gd_scene load_steps=7 format=3 uid="uid://dxaeplme20jmc"]

[ext_resource type="PackedScene" uid="uid://cs0fys4qcxagn" path="res://destructible/rigid_mesh_body.tscn" id="1_iuc4f"]
[ext_resource type="Script" uid="uid://ctfyuxk71m773" path="res://destructible/rubble/rubble_mesh_body.gd" id="2_16cdi"]
[ext_resource type="Texture2D" uid="uid://jfp8mt2l78c6" path="res://destructible/rubble/smoke.png" id="2_clfbe"]

[sub_resource type="Gradient" id="Gradient_iuc4f"]
colors = PackedColorArray(0.15, 0.08525, 0.039, 1, 0.22, 0.155833, 0.11, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_clfbe"]
gradient = SubResource("Gradient_iuc4f")
fill = 1

[sub_resource type="Gradient" id="Gradient_clfbe"]
colors = PackedColorArray(0.27, 0.207225, 0.1485, 0.705882, 1, 0.834667, 0.68, 0)

[node name="RigidMeshBody" instance=ExtResource("1_iuc4f")]
collision_mask = 314
mass = 50.0
center_of_mass_mode = 0
script = ExtResource("2_16cdi")
enable_contact_re_emission = true
re_emission_impulse_threshold = 750.0
re_emission_min_speed = 5.0
max_emissions = 3
use_mesh_as_collision = false
min_mass = 10.0
recenter_polygon = false
invoke_ready = true

[node name="Mesh" parent="." index="0"]
texture = SubResource("GradientTexture2D_clfbe")

[node name="SmokeParticles" type="CPUParticles2D" parent="." index="3" groups=["Wind_CPUParticles2D"]]
emitting = false
amount = 10
texture = ExtResource("2_clfbe")
lifetime = 2.0
one_shot = true
explosiveness = 0.1
randomness = 0.35
lifetime_randomness = 0.5
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 50)
initial_velocity_min = 20.0
initial_velocity_max = 50.0
angular_velocity_min = 8.55
angular_velocity_max = 20.0
scale_amount_min = 0.1
scale_amount_max = 0.3
color_ramp = SubResource("Gradient_clfbe")

[node name="CappedEmissionCooldownTimer" type="Timer" parent="." index="4"]
wait_time = 10.0
one_shot = true
